# Nowcast-Dengue-in-India

./: .gitignore  PROJECT_HANDOFF.md  README.md  lambda_tuning.ipynb  load_processed_data.py  master_data.csv  model_step1_google_only.py  model_step1_google_wiki.py  monthly_mosquito_aggregate.csv  preprocessing.py  requirements.txt  step2_nowcast_loss_function_train_test_split.ipynb  step2_nowcast_loss_function_train_test_split_rolling.ipynb  step2_nowcast_loss_function_train_test_split_rolling_wiki.ipynb  step2_nowcast_loss_function_train_test_split_rolling_wiki_with_period_features.ipynb  step2_nowcast_loss_function_train_test_split_rolling_wiki_with_period_features_lambda_tuning.ipynb  step2_nowcast_mixed_lags.ipynb  step2_nowcast_mosquito.ipynb  step2_nowcast_mosquito_log.ipynb  step2_nowcast_mosquito_midpoint.ipynb  step2_nowcast_mosquito_with_step1_overlay_anchor.ipynb  step2_nowcast_mosquito_with_step1_overlay_anchor_boundaryline.ipynb  step2_nowcast_mosquito_with_step1_overlay_futurecolor.ipynb  step2_nowcast_train_test_split.ipynb  total_dengue_views.csv  updated_nowcast.ipynb  updated_nowcast_log.ipynb  wikipedia_raw_vs_weighted_pageviews(in).csv
api/: README_api.md  build_prediction_store.py  main.py  repository.py  schemas.py
client/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
client/examples/: basic_usage.py
client/src/dengue_nowcast_client/: __init__.py  client.py  exceptions.py  types.py
client/tests/: test_client.py
dashboard/: README.md  app.py  prepare_dashboard_data.py  utils.py
dengue_updater/: HANDOFF.md  requirements.txt
(+123 files in other folders)
