[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dengue-nowcast-client"
version = "0.1.0"
description = "Python client for the India Dengue Nowcast History API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]
keywords = ["dengue", "nowcast", "india", "epidemiology", "api-client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
"API Docs"   = "https://dengue-nowcast-api.onrender.com/docs"
"Repository" = "https://github.com/your-username/Nowcast-Dengue-in-India"

[tool.setuptools.packages.find]
where = ["src"]
